# airbnb-clone-backend

./: package-lock.json  package.json  pyproject.toml
airbnb-clone-frontend-sub/: .gitignore  package-lock.json  package.json
airbnb-clone-frontend-sub/src/: App.tsx  api.ts  index.tsx  router.tsx  types.ts
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details_and_more.py  0003_perk_category.py  0004_remove_perk_category_experience_category.py
medias/: admin.py  models.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_remove_photo_experienc_photo_experience_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  test.json  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  (+4 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
utils/: auth.py
wishlists/: models.py  serializers.py  urls.py  views.py
(+17 files in other folders)
